# kicad-rs

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: main.yml
kicad-functions/: Cargo.toml
kicad-functions/src/: lib.rs  vdiv.rs
kicad-rs/: Cargo.toml
kicad-rs/src/: eval.rs  policy.rs
kicad-rs/src/cue/: policy_schema.cue
kicad-rs/src/eval/: display.rs  path.rs
kicad-rs/src/evaluator/: main.rs
kicad-rs/src/parser/: main.rs
kicad/kicad_functions/: Cargo.toml
kicad/kicad_functions/src/: idx.rs  lib.rs  util.rs  vdiv.rs
kicad/kicad_rs/: Cargo.toml  sample_policy.cue
kicad/kicad_rs/src/: codec.rs  error.rs  eval.rs  lib.rs  parser.rs  policy.rs  types.rs
kicad/kicad_rs/src/cue/: common.cue  map.cue  reduce.cue
kicad/kicad_rs/src/eval/: entry.rs  index.rs
kicad_rs/: Cargo.toml
kicad_rs/src/: classifier.rs  codec.rs  error.rs  eval.rs  labels.rs  lib.rs  parser.rs  policy.rs  requirements.rs  resolver.rs  types.rs
kicad_rs/src/eval/: entry.rs  index.rs
testdata/: Properties.sch  sym-lib-table  test.sch  test.yaml
testdata/simple/: simple.cue  simple.kicad_pcb  simple.sch
