[package]
name = "kicad-functions"
version = "0.1.0"
authors = ["Dennis Marttinen <twelho@welho.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evalexpr = "6"
regex = "1.5"
resistor-calc = { git = "https://github.com/racklet/resistor-calc.git", default-features = false }
