[package]
name = "kicad-rs"
version = "0.1.0"
authors = ["Dennis Marttinen <twelho@welho.tech>", "Lucas Käldström <lucas.kaldstrom@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
evalexpr = "6"
gpoint = "0.1"
kicad-functions = { path = "../kicad-functions" }
kicad_parse_gen = { git = "https://github.com/racklet/kicad-parse-gen" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tempfile = "3.2"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.13", features = ["full"] }
reqwest = { version = "0.11.5", features = ["blocking", "json"] }
webbrowser = "0.5.5"
url = "2.2.2"
