[package]
name = "kicad_rs"
version = "0.1.0"
authors = ["Dennis Marttinen <twelho@welho.tech>", "Lucas Käldström <lucas.kaldstrom@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evalexpr = "6.1"
kicad_functions = { path = "../kicad_functions" }
kicad_parse_gen = { git = "https://github.com/productize/kicad-parse-gen", branch = "kicad5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
